css/*REPL* [python]
  File "/Users/youngchk/Documents/site/qwewy.github.io/css/style.css", line 1
    body{
        ^
SyntaxError: invalid syntax
>>> 